--- a/assets/css/sections.css
+++ b/assets/css/sections.css
@@ -9,7 +9,7 @@
 /* █████████████████████████████████████████ */
 
 /* أي قسم رئيسي في الصفحة */
-section {
+section:not(.hero) {
   padding: 16px;
 }
 
